# fuso

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Package.swift  README.md  SECURITY.md  install.sh
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml  release.yml
Sources/: ClockView.swift  Info.plist
cli/: Cargo.toml
cli/src/: main.rs
crates/fuso-core/: Cargo.toml
crates/fuso-core/src/: config.rs  flags.rs  lib.rs  timezone.rs
linux/: Cargo.toml  build-flatpak.sh  dev.zaptech.fuso.yml
linux/data/: dev.zaptech.fuso.desktop  dev.zaptech.fuso.metainfo.xml
linux/src/: config.rs  main.rs
macos/Sources/: AppDelegate.swift  Config.swift
