[package]
name = "fuso"
version = "0.1.0"
edition = "2021"
description = "Track your team's timezones from the terminal"
license = "MIT"
repository = "https://github.com/zaptech-dev/fuso"
homepage = "https://github.com/zaptech-dev/fuso"
readme = "../README.md"
keywords = ["timezone", "cli", "worldclock", "team"]
categories = ["command-line-utilities"]

[dependencies]
fuso-core = { path = "../crates/fuso-core" }
chrono = "0.4"
chrono-tz = "0.10"
